Add small patch

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -4,3 +4,12 @@
 //- Dev1 ID: 321924433
 //- Dev2 name: Shirel Bitan
 //- Dev2 ID: 209322395
+
+
+doctype html
+html
+  head
+    title= title
+  body
+      h1= title
+      p Welcome to #{title}
