Add report and features

--- a/app/views/report.jade
+++ b/app/views/report.jade
@@ -12,8 +12,8 @@ html
   body
     h1 Create a Report
     form(action="/report", method="get")
-      label(for="user-id") User ID:
-      input(type="text", name="user-id", id="user-id")
+      label(for="userId") User ID:
+      input(type="text", name="userId", id="userId")
       label(for="month") Month:
       input(type="text", name="month", id="month")
       label(for="year") Year:
