Add final fixes

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -13,6 +13,7 @@ html
     h1 Cost Management App
     button(onclick="redirectTo('addcost')") Add Cost
     button(onclick="redirectTo('create-report')") Create Report
+    button(onclick="redirectTo('adduser')") Add User
     button(onclick="redirectTo('about')") About
 
   script.
