--- a/app/views/report.jade
+++ b/app/views/report.jade
@@ -8,7 +8,7 @@
 doctype html
 html
   head
-    title Create a Report
+    title Cost Management App
   body
     h1 Create a Report
     form(action="/report", method="get")
