--- a/app/views/addcost.jade
+++ b/app/views/addcost.jade
@@ -1,3 +1,10 @@
+//-
+//- ----- Developers info -----
+//- Dev1 name: Anastasia Hamandritov
+//- Dev1 ID: 321924433
+//- Dev2 name: Shirel Bitan
+//- Dev2 ID: 209322395
+
 doctype html
 html
   head
